--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: path_provider
 description: Flutter plugin for getting commonly used locations on host platform file systems, such as the temp and app data directories.
 repository: https://github.com/flutter/plugins/tree/main/packages/path_provider/path_provider
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+path_provider%22
+publish_to: none
 version: 2.0.11
 
 environment:
@@ -20,11 +21,11 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider_android:
-    path: path_provider_android
+    path: ./path_provider_android
   path_provider_ios:
-    path: path_provider_ios
+    path: ./path_provider_ios
   path_provider_platform_interface:
-    path: path_provider_platform_interface
+    path: ./path_provider_platform_interface
 
 dev_dependencies:
   flutter_driver:
