--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,9 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider_android:
-    path: ./path_provider_android
-  path_provider_ios:
-    path: ./path_provider_ios
-  path_provider_platform_interface:
-    path: ./path_provider_platform_interface
+  path_provider_android: ^2.0.6
+  path_provider_ios: ^2.0.6
+  path_provider_platform_interface: ^2.0.0
 
 dev_dependencies:
   flutter_driver:
